dc-app.yaml
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: ${NOME_APP}-app
    name: ${NOME_APP}-app
  spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      app: ${NOME_APP}-app
      deploymentconfig: ${NOME_APP}-app
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: ${NOME_APP}-app
          deploymentconfig: ${NOME_APP}-app
      spec:
        containers:
        - env:
          - name: SPRING_DATASOURCE_USERNAME
            valueFrom:
              secretKeyRef:
                key: SPRING_DATASOURCE_USERNAME
                name: ${NOME_APP}-app-secret
          - name: SPRING_DATASOURCE_PASSWORD
            valueFrom:
              secretKeyRef:
                key: SPRING_DATASOURCE_PASSWORD
                name: ${NOME_APP}-app-secret
          - name: SPRING_DATASOURCE_URL
            value: jdbc:mysql://${NOME_APP}-mysql:3306/${BANCO}
          imagePullPolicy: Always
          name: ${NOME_APP}-app
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          - containerPort: 9779
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - ${NOME_APP}-app
        from:
          kind: ImageStreamTag
          name: ${NOME_APP}-app:latest
      type: ImageChange
