svc-app.yaml
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ${NOME_APP}
    name: ${NOME_APP}-app
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    - name: 9779-tcp
      port: 9779
      protocol: TCP
      targetPort: 9779
    selector:
      app: ${NOME_APP}-app
      deploymentconfig: ${NOME_APP}-app
    sessionAffinity: None
    type: ClusterIP
