svc-mysql.yaml
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      template.openshift.io/expose-uri: mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mysql")].port}
    labels:
      app: ${NOME_APP}
    name: ${NOME_APP}-mysql
  spec:
    ports:
    - name: ${NOME_APP}-mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      name: ${NOME_APP}-mysql
    sessionAffinity: None
    type: ClusterIP
