route-app.yaml
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: ${NOME_APP}
    name: ${NOME_APP}-app
  spec:
    host: ${ROTA_URL_APP}
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: ${NOME_APP}-app
      weight: 100
    wildcardPolicy: None
